scripts/sbatch/errores/err_13124257.txt
  File "/mnt/netapp2/Home_FT2/home/ulc/cursos/curso342/Local-ewcmf-1/scripts/sbatch/../sk_learn/tree/scripts/HistGradientBoosting copy.py", line 56
    Definir parámetros para la búsqueda de hiperparámetros
            ^^^^^^^^^^^
SyntaxError: invalid syntax
